<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="2dp"
    android:background="@drawable/gradient"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Tela2">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">
        <include layout="@layout/barra2"></include>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.37">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/rb1"
                android:textColor="#fe000000"
                android:id="@+id/emclinica" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#fe000000"
                android:text="@string/rb2"
                android:id="@+id/actransito" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#fe000000"
                android:text="@string/rb3"
                android:id="@+id/incendio" />
        </RadioGroup>

        <Button
            android:layout_width="154dp"
            android:layout_height="100dp"
            android:text="@string/bt2"
            android:background="@drawable/bordabotaosos"
            android:id="@+id/sos"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.42" />





        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txt_bombeiro"
            android:textColor="#fe000000"
            android:id="@+id/textView"
            android:layout_marginTop="130dp"
            android:layout_gravity="center_horizontal" />



    </LinearLayout>
    </ScrollView>

</RelativeLayout>
