<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".BasicMaskActivity">





    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <include layout="@layout/barra1"></include>


            <TextView
                android:layout_width="wrap_content"
                android:paddingLeft="5dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fe000000"
                android:text="@string/txtNome_Completo"
                android:id="@+id/textNome" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:inputType="textPersonName"
                android:textColor="#fe000000"
                android:ems="10"
                android:id="@+id/editNome"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:text="@string/txtDatansc"
                android:id="@+id/textnsc" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textColor="#fe000000"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/editnsc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:text="@string/txtCpf"
                android:id="@+id/textCpf" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:inputType="numberSigned"
                android:textColor="#fe000000"
                android:ems="10"
                android:id="@+id/editcpf" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:text="@string/txtNomemae"
                android:id="@+id/textmae" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:inputType="textPersonName"
                android:textColor="#fe000000"
                android:text=""
                android:ems="10"
                android:id="@+id/editmae"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt1"
                android:id="@+id/concluir"
                android:textColor="#000000"
                android:background="@drawable/bordabotao"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>